--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,11 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card
+            photoCover="https://www.morecap.com.br/assets/images/SM-placeholder.png"
+            cardTitle="Lorem ipsum dolor sit amet consectetur"
+            cardDescription="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil illo ut deserunt, id neque quisquam quo pariatur voluptate vero ratione facilis voluptatem accusantium optio eligendi minus natus dolore fuga consequatur."
+        ></app-big-card>
     </div>
     <div class="articles__others">
         <app-small-card></app-small-card>
