dinamycs components proportys

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,17 @@
         ></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+            photoCover="https://www.morecap.com.br/assets/images/SM-placeholder.png"
+            cardTitle="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga expedita animi dolorum."
+        ></app-small-card>
+        <app-small-card
+            photoCover="https://www.morecap.com.br/assets/images/SM-placeholder.png"
+            cardTitle="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti minima eos delectus sit laboriosam, asperiores qui."
+        ></app-small-card>
+        <app-small-card
+            photoCover="https://www.morecap.com.br/assets/images/SM-placeholder.png"
+            cardTitle="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, recusandae?"
+        ></app-small-card>
     </div>
 </div>
