--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,13 +2,13 @@
     <div class="container__small-card-content">
         <div class="small-card__photo">
             <img
-                src="https://www.morecap.com.br/assets/images/SM-placeholder.png"
+                src="{{ photoCover }}"
                 height="100px"
                 alt=""
             >
         </div>
         <div class="small-card__title">
-            <h1><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga expedita animi dolorum.</a></h1>
+            <h1><a href="#">{{ cardTitle }}</a></h1>
         </div>
     </div>
     <div class="container__small-card__separator">
