--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,8 +1,7 @@
 .container__big-card {
-    margin: 0 20px;
-    width: 400px;
-    height: 500px;
-
+    padding: 20px;
+    width: 100vw;
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -11,7 +10,6 @@
 
 .big-card__photo > img {
     width: 100%;
-    min-width: 400px;
 }
 
 .big-card__title > h1 {
