--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -1,8 +1,6 @@
 .container__content {
-    width: 100%;
     height: 100%;
-    margin-top: 20px;
-    padding: 0 80px;
+    padding: 20px;
 
     display: flex;
     flex-direction: column;
