--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -8,6 +8,7 @@
     justify-content: flex-start;
 }
 
+
 .big-card__photo > img {
     width: 100%;
 }
@@ -15,10 +16,12 @@
 .big-card__title > h1 {
     font-size: 20px;
     margin-top: 15px;
+    padding: 0 5px;
 }
 
 .big-card__description {
     margin-top: 20px;
+    padding: 0 5px;
 }
 
 .big-card__description > p > a {
