--- a/src/app/components/small-card/small-card.responsive.component.css
+++ b/src/app/components/small-card/small-card.responsive.component.css
@@ -19,7 +19,7 @@
 
 @media screen and (min-width: 1024px) {
     .container__small-card {
-        width: 700px;
+        width: 500px;
     }
     
     .container__small-card-content {
@@ -34,6 +34,7 @@
     .small-card__title>h1 {
         text-align: left;
         padding: 0 20px;
+        font-size: 14px;
     }
     
 }
