--- a/src/app/pages/content/content.responsive.component .css
+++ b/src/app/pages/content/content.responsive.component .css
@@ -1,38 +1,33 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .container__articles {
-        flex-direction: row;
+    .container__content {
+        margin: 20px;
+        padding: 0 4rem;
+
+    }
+
+    .content__cover {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content__cover > img {
+        margin: 35px 0;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .container__content {
-        width: 100%;
-        height: 100%;
-        margin-top: 20px;
-        padding: 0 80px;
-    
+        margin: 20px;
+        padding: 0 12rem;
+    }
+
+    .content__cover {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
-    
+
     .content__cover > img {
-        width: 500px;
-        min-width: 500px;
-        height: 300px;
-        margin-bottom: 20px;
-        border: 5px solid rgb(201, 199, 199);
-        border-radius: 5px;
-    }
-    
-    .content__description {
-        margin-top: 20px;
-    }
-    
-    .content__description > p {
-        color: rgb(144, 144, 144);
-        margin-top: 10px;
+        margin: 35px 0;
     }
 }
 
